Testing that schema unions are also a subset of Cloud
In several places, we have polymorphic attributes, like `Automation.trigger` or
`DeploymentSchedule.schedule`.  In these cases, they don't have a `type` in the
schema, but rather an `anyOf` list of possible types.  This change makes sure
those are also a subset of Cloud.

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,9 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+
+# Files used to run the compat tests
+compat-venv
+cloud_schema.json
+oss_schema.json
